[gd_scene load_steps=2 format=3 uid="uid://organization_ui_scene"]

[ext_resource type="Script" path="res://scripts/organization_ui.gd" id="1_org_ui"]

[node name="OrganizationUI" type="Control"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 300.0
script = ExtResource("1_org_ui")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ORGANIZACIÓN POPULAR"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="NPCSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NPCLabel" type="Label" parent="VBoxContainer/NPCSection"]
layout_mode = 2
text = "COMPAÑEROS"

[node name="NPCCountLabel" type="Label" parent="VBoxContainer/NPCSection"]
layout_mode = 2
text = "NPCs Contactados: 0"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="EnergySection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EnergyTitleLabel" type="Label" parent="VBoxContainer/EnergySection"]
layout_mode = 2
text = "ENERGÍA COLECTIVA"

[node name="EnergyLabel" type="Label" parent="VBoxContainer/EnergySection"]
layout_mode = 2
text = "Energía Colectiva: 0"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GroupsSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GroupsLabel" type="Label" parent="VBoxContainer/GroupsSection"]
layout_mode = 2
text = "GRUPOS ORGANIZADOS"

[node name="GroupsContainer" type="VBoxContainer" parent="VBoxContainer/GroupsSection"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ProgressSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ProgressTitleLabel" type="Label" parent="VBoxContainer/ProgressSection"]
layout_mode = 2
text = "PRESIÓN SOCIAL"

[node name="SocialPressureBar" type="ProgressBar" parent="VBoxContainer/ProgressSection"]
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="VBoxContainer/ProgressSection"]
layout_mode = 2
text = "Presión Social: 0%"

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionsSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionsLabel" type="Label" parent="VBoxContainer/ActionsSection"]
layout_mode = 2
text = "ACCIONES COLECTIVAS"

[node name="ActionsContainer" type="VBoxContainer" parent="VBoxContainer/ActionsSection"]
layout_mode = 2